--- a/package.json
+++ b/package.json
@@ -10,18 +10,38 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@tanstack/react-table": "^8.20.1",
+    "@types/formidable": "^3.4.5",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "formidable": "^3.5.1",
+    "lucide-react": "^0.428.0",
+    "mime-types": "^2.1.35",
     "next": "14.2.5",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
-    "sweetalert2": "^11.12.4"
+    "sharp": "^0.33.5",
+    "sweetalert2": "^11.12.4",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
