--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
