--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start -p 5000",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node --transpile-only prisma/seed.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -57,11 +58,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^20",
+    "@types/node": "^22.4.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
