--- a/.env.copy
+++ b/.env.copy
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://username:password@localhost:5432/biblioDB?schema=public"
+
+MAILER_SERVICE=smtp.ethereal.email
+MAILER_LOGIN=landen.kuvalis66@ethereal.email
+MAILER_PASSWORD=zXe86PvryhxV5UrFtu
+MAILER_PORT=587
