--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
@@ -59,6 +60,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.4.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
